# plugins-sdk

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/glmods/: gl_plugin.h
include/glmods/ext/: gl_commands.h  gl_console.h  gl_log.h  gl_lua.h  gl_lua_funcs.inc.h
src/: glvalidate.cpp  sample.c
